<resources>
    <string name="app_name">Chicken Rush</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="start_game">Start Game</string>
    <string name="Lost_Message">TextView</string>
    <string name="sensor_mode">Start Sensor Mode</string>
    <string name="buttons_mode">Start Buttons Mode</string>
    <string name="top_ten">Top Ten</string>
    <string name="start_menu">Start Menu</string>
    <string name="fast">Fast</string>
    <string name="enter_name">Enter Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slow">Slow</string>
    <string name="music">Music</string>
    <string name="mode_sensor">Sensor</string>
    <string name="mode_button">Button</string>
    <string name="main_menu">Main Menu\n</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="title_activity_map_fragment">MapFrag</string>
</resources>