<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="@dimen/Default_Margin">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/scoreitem_LBL_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:maxLines="1"
        android:textSize="@dimen/top_ten_default_string"
        android:gravity="center"
        android:layout_marginEnd="@dimen/Default_Margin"
        android:layout_marginTop="@dimen/Default_Margin"
        android:layout_marginStart="@dimen/Default_Margin"
        android:ellipsize="end"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/scoreitem_LBL_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="@dimen/top_ten_default_string"
        android:gravity="center"
        android:layout_marginEnd="@dimen/Default_Margin"
        android:layout_marginTop="@dimen/Default_Margin"

        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/scoreitem_LBL_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat"
        android:gravity="center"
        android:textSize="@dimen/top_ten_default_string"
        android:layout_marginEnd="@dimen/Default_Margin"
        android:layout_marginTop="@dimen/Default_Margin"

        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/scoreitem_LBL_lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lon"
        android:gravity="center"
        android:textSize="@dimen/top_ten_default_string"
        android:layout_marginEnd="@dimen/Default_Margin"
        android:layout_marginTop="@dimen/Default_Margin"

        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/scoreitem_IMG_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/map_pin"
        android:layout_marginTop="@dimen/map_pin_top_margin"
        />

</androidx.appcompat.widget.LinearLayoutCompat>